new css for website

--- a/wp-content/themes/starterkit-theme/src/scss/main.scss
+++ b/wp-content/themes/starterkit-theme/src/scss/main.scss
@@ -12,6 +12,7 @@
 
 //COMPONENTS
 
+
 // UTILITIES
 @import 'utilities/base-style';
 @import 'utilities/layoutAlignment';
@@ -20,3 +21,24 @@
 // VENDORS
 @import 'vendor/mmenu';
 @import 'vendor/hamburger';
+
+// SCSS FOLDER
+@import 'bynumbers1.scss';
+@import 'bynumbers2.scss';
+@import 'bynumbers3.scss';
+@import 'goals1.scss';
+@import 'goals2.scss';
+@import 'goals3.scss';
+@import 'goalsintro.scss';
+@import 'homepage.scss';
+@import 'marketingblueprint1.scss';
+@import 'marketingblueprint2.scss';
+@import 'marketingblueprint3.scss';
+@import 'marketingblueprint4.scss';
+@import 'marketingblueprint5.scss';
+@import 'marketingintro.scss';
+@import 'numbersintro.scss';
+@import 'SMB.scss';
+@import 'timeintro.scss';
+@import 'timelines1.scss';
+@import 'timelines2.scss';
