--- a/wp-content/themes/starterkit-theme/src/scss/SMB.scss
+++ b/wp-content/themes/starterkit-theme/src/scss/SMB.scss
@@ -1,7 +1,4 @@
 .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 100px;
-  width: auto;
+  margin-bottom: 50px;
+  width: 100%;
 }
