--- a/wp-content/themes/starterkit-theme/src/scss/goals1.scss
+++ b/wp-content/themes/starterkit-theme/src/scss/goals1.scss
@@ -27,60 +27,31 @@
   border-bottom: black 4px solid;
 }
 
+.goalsflex {
+  display: flex;
+}
 
-
-.goaltopleft {
-  margin-right: auto;
-  margin-left: 0;
-  height: 280px;
-  display: block;
-  width: 360px;
+.goals-content {
+  width: 50%;
   h2 {
     font-size: 36px;
     margin-bottom: 20px;
     border-bottom: grey 1px solid;
-  }
-  p {
-    font-size: 20px;
-    margin-bottom: 0px;
-    color: rgb(200, 90, 0);
-    display: block;
-    font-style: italic;
-    font-weight: bold;
-  }
-}
-
-.goalbottomleft {
-  margin-left: 0;
-  display: block;
-  width: 320px;
-  margin-top: 1px;
-  h2 {
-    font-size: 36px;
     margin-bottom: 20px;
-    border-bottom: grey 1px solid;
   }
   p {
     font-size: 20px;
     margin-bottom: 0px;
-    color: rgb(200, 90, 0);
+    color: rgb(200, 100, 0);
     display: block;
     font-style: italic;
     font-weight: bold;
+    margin-bottom: 55px;
   }
-}
 
-.imageright {
-  margin-right: 2px;
-  margin-left: 0px;
-  height: 880px;
-  width: auto;
 }
 
 .imageright img {
-  display: flex;
-  flex-wrap: wrap;
-  height: 640px;
-  margin-right: 2;
+  margin-right: 2px;
   margin-left: auto;
 }
