--- a/wp-content/themes/starterkit-theme/src/scss/goalsintro.scss
+++ b/wp-content/themes/starterkit-theme/src/scss/goalsintro.scss
@@ -1,7 +1,10 @@
 .goldback {
-  background-color: gold;
+  background-color: rgb(220,175,35);
   padding-top: 220px;
   padding-bottom: 440px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .goldback h2 {
